--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "atob": "^2.1.2",
+    "axios": "^0.24.0",
     "cookie-parser": "~1.4.4",
     "debug": "^2.6.9",
     "dotenv": "^10.0.0",
@@ -15,6 +17,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "react-file-viewer-plugins-v3": "^1.0.0",
     "request": "^2.88.2",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.2.0",
