--- a/package.json
+++ b/package.json
@@ -16,11 +16,18 @@
     "express-openapi": "^10.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
+    "node-poppler": "^5.1.1",
     "nodemon": "^2.0.15",
+    "path": "^0.12.7",
+    "pdf-page-counter": "^1.0.3",
+    "pdf-poppler": "^0.2.1",
+    "pdf2pic": "^2.1.4",
     "react-file-viewer-plugins-v3": "^1.0.0",
     "request": "^2.88.2",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.2.0",
+    "tesseract.js": "^2.1.5",
+    "uuid": "^8.3.2",
     "xmldom": "^0.6.0"
   }
 }
